# m2r-project

./: .gitignore  README.md  pyproject.toml  references.txt  setup.cfg
m2r/: BEM_combined_potential.py  diffraction_BEM_dh.py  figure_gen.py  funcs.py  helmholtz_2.py  helmholtz_testing.py  indirect_BEM.py  indirect_BEM_combined.py  pdes.py
m2r_project/: __init__.py
m2r_project/BEM/: __init__.py  indirect_BEM.py  indirect_BEM_combined.py
m2r_project/helper/: __init__.py  green_function.py  mesh_convergence.py  wave_components.py
m2r_project/visuals/: BEM_visuals.py  __init__.py  general_visuals.py  testing_visuals.py  visuals.py
sommerfeld/: sommerfeld_testing.py
