[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m2r"
version = "0.1.0"
authors = [
  { name="Dan Haywood", CID="02404325" },
  { name="Kane Rowley", CID="02220050" },
  { name="Michael Williams", CID="02385632" }
]
description = "A package to calculate diffraction on plates using the boundary element method."
readme = "README.md"

dependencies = [
    "numpy",
    "matplotlib",
    "mayavi",
    "scipy",
]
